--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "aos": "^2.3.4",
+    "emailjs-com": "^2.4.1",
+    "formik": "^2.1.4",
     "react": "^16.13.1",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.13.1",
     "react-items-carousel": "^2.8.0",
     "react-scripts": "3.4.1",
-    "react-scroll": "^1.7.16"
+    "react-scroll": "^1.7.16",
+    "yup": "^0.29.1"
   },
   "scripts": {
     "start": "react-scripts start",
