--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "aos": "^2.3.4",
+    "axios": "^0.19.2",
     "emailjs-com": "^2.4.1",
     "formik": "^2.1.4",
     "react": "^16.13.1",
