--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "react-items-carousel": "^2.8.0",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
+    "source-map-explorer": "^2.4.2",
     "yup": "^0.29.1"
   },
+
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
+    "build": " CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
